[package]
name = "Porfira"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde_json = "1.0"
serde = "1.0"
postgres = { version = "^0.19.2", features = ["with-uuid-0_8"] }
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
getrandom = "0.2"
postgres-types = { version = "0.2.2", features = ["derive"] }
thiserror = "1.0"
chrono = "0.4"
jsonwebtoken = "=7.2"
actix-web-actors = "4.1.0"
rust-argon2 = "1.0"
cookie = "0.16"


[build]
target = "x86_64-unknown-linux-gnu"