[package]
name = "Porfira"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = { version = "0.3", features = ["compat"] }
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "=7.2"
actix-web-actors = "4.1.0"
rust-argon2 = "1.0"
cookie = "0.16"
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls", "postgres" ] }
